@@ -2,6 +2,10 @@
 
  - Fix for bug 26305: Use safe hash calculation to avoid hash collisions
 
+* 2013-04-27 - thorben.betten@open-xchange.com
+
+ - Fix for bug 26237: Fixed possible XSS vulnerability
+
 * 2013-04-17 - thorben.betten@open-xchange.com
 
  - Fix for bug 25957: Deny "vbscript" URLs
